fix: fix h3 contrast colors of about section

--- a/app/(root)/styles.css
+++ b/app/(root)/styles.css
@@ -1,3 +1,7 @@
+.about-section h3 {
+  color: #625f5f;
+}
+
 .about-section p {
   color: #625f5f;
   font-weight: 600;
